# Ak

./: .clang-format  CMakeLists.txt
examples/: blur_effect.cpp  cpp_path_tracer.cpp  render_lidar.cpp  render_points.cpp  render_to_texture.cpp
glad/include/glad/: glad.h
glad/src/: glad.c
include/Ak/: Constants.h  FlyCamera.h  GLFW.h  ObjMeshModel.h  OpenGLBlurEffect.h  OpenGLFramebuffer.h  OpenGLHRTMeshRenderProgram.h  OpenGLLidarRenderProgram.h  OpenGLPointRenderProgram.h  OpenGLRenderbuffer.h  OpenGLScreenSpaceEffect.h  OpenGLShaderProgram.h  OpenGLTexture2D.h  OpenGLTextureQuadPair.h  OpenGLTextureQuadRenderProgram.h  OpenGLTriangleTextureRenderProgram.h  OpenGLVertexBuffer.h  RTMeshModel.h  SingleWindowGLFWApp.h
shaders/: blur_effect.frag  hrt_render_mesh.frag  hrt_render_mesh.vert  render_lidar.frag  render_lidar.vert  render_lidar_lighting.frag  render_lidar_lighting.vert  render_lidar_normal_estimation.frag  render_lidar_points_to_spheres.frag  render_points.frag  render_points.vert  render_texture_quad_pair.frag  render_texture_quad_pair.vert
src/: GLFW.cpp  ObjMeshModel.cpp  OpenGLBlurEffect.cpp  OpenGLFramebuffer.cpp  OpenGLHRTMeshRenderProgram.cpp  OpenGLLidarRenderProgram.cpp  OpenGLPointRenderProgram.cpp  OpenGLRenderbuffer.cpp  OpenGLScreenSpaceEffect.cpp  OpenGLShaderProgram.cpp  OpenGLTexture2D.cpp  OpenGLTextureQuadPair.cpp  SingleWindowGLFWApp.cpp
